@@ -1,7 +1,8 @@
 2010-08-19  David Reveman  <davidr@novell.com>
 
 	* effect.cpp: Only use integer translation optimization when
-	source dimensions match output size.
+	source dimensions match output size. Fix TransformEffect
+	constant buffer allocation.
 
 	* uielement.h:
 	* uielement.cpp: Replace COMPOSITE_CLIP with COMPOSITE_CACHE.
